--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.29.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hooks-useform": "^0.1.86",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
