--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "address-validator": "^0.2.3",
     "cloudinary": "^1.30.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "^4.6.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "underscore": "^1.13.4"
   },
   "scripts": {
     "start": "nodemon server.js"
