--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "underscore": "^1.13.4"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "PROD=true node server.js",
+    "postinstall": "cd ../client && yarn"
   }
 }
